A quick fix for #20 ... but it doesn't work well for dark mode.

--- a/src/css/structurizr-diagram.css
+++ b/src/css/structurizr-diagram.css
@@ -56,6 +56,10 @@
     r: 25px;
 }
 
+.joint-link.joint-theme-default .connection-wrap:hover + .labels rect {
+    fill: #d6d6d6;
+}
+
 #navigationModal option {
     padding: 5px;
 }
